--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,10 @@
 body{
     height: 100%;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 22px;
 }
+
+
 /*header*/
 /*The hero image*/
 .hero-image {
@@ -24,7 +27,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    color: aliceblue;
+    color: lightblue;
 }
 
 p{
@@ -61,3 +64,4 @@ button{
     
 
  }
+
